cmake_minimum_required (VERSION 3.8)

set(PUBLIC_INCLUDE_DIR "../include/chapter2")

include_directories("../include")

# exercise
add_executable(ex2_4 ex_2_4.cpp)
add_executable(ex2_8 ex_2_8.cpp)
add_executable(ex2_18 ex_2_18.cpp)
add_executable(ex2_39 ex_2_39.cpp)
add_executable(ex2_40 ex_2_40.cpp)
add_executable(ex2_41 ex_2_41.cpp)
add_executable(ex2_42 ex_2_42.cpp)
